added support vector model

--- a/data/coupon_files/script_2.ipynb
+++ b/data/coupon_files/script_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,19 +43,6 @@
        "      <th>SemType</th>\n",
        "      <th>Holiday</th>\n",
        "      <th>CouponsMand</th>\n",
-       "      <th>Ajwain Parantha</th>\n",
-       "      <th>Aloo Sabzi</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Kathal</th>\n",
-       "      <th>Arvi</th>\n",
-       "      <th>Mango</th>\n",
-       "      <th>Paneer Lababdar</th>\n",
-       "      <th>Seasonal Vegetable (Karela)</th>\n",
-       "      <th>Dhuli Urad Dal</th>\n",
-       "      <th>Aloo Kasoori Methi</th>\n",
-       "      <th>Nutrela Peas</th>\n",
-       "      <th>Palak Soya</th>\n",
-       "      <th>Lauki Chana</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -69,19 +56,6 @@
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -92,19 +66,6 @@
        "      <td>217.0</td>\n",
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -117,19 +78,6 @@
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -140,19 +88,6 @@
        "      <td>220.0</td>\n",
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -165,23 +100,9 @@
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 130 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -192,43 +113,27 @@
        "3  2022-09-01        3         Dinner       113.0    220.0    Acad        0   \n",
        "4  2022-09-02        4      BreakFast       100.0    236.0    Acad        0   \n",
        "\n",
-       "   CouponsMand  Ajwain Parantha  Aloo Sabzi  ...  Kathal  Arvi  Mango  \\\n",
-       "0          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "1          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "2          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "3          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "4          0.0              0.0         0.0  ...     0.0   0.0    0.0   \n",
-       "\n",
-       "   Paneer Lababdar  Seasonal Vegetable (Karela)  Dhuli Urad Dal  \\\n",
-       "0              0.0                          0.0             0.0   \n",
-       "1              0.0                          0.0             0.0   \n",
-       "2              0.0                          0.0             0.0   \n",
-       "3              0.0                          0.0             0.0   \n",
-       "4              0.0                          0.0             0.0   \n",
-       "\n",
-       "   Aloo Kasoori Methi  Nutrela Peas  Palak Soya  Lauki Chana  \n",
-       "0                 0.0           0.0         0.0          0.0  \n",
-       "1                 0.0           0.0         0.0          0.0  \n",
-       "2                 0.0           0.0         0.0          0.0  \n",
-       "3                 0.0           0.0         0.0          0.0  \n",
-       "4                 0.0           0.0         0.0          0.0  \n",
-       "\n",
-       "[5 rows x 130 columns]"
+       "   CouponsMand  \n",
+       "0          0.0  \n",
+       "1          0.0  \n",
+       "2          0.0  \n",
+       "3          0.0  \n",
+       "4          0.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_file = pd.read_csv(\"/Users/nalishjain/Documents/GitHub/ml-project/data/all_with_onehot.csv\")\n",
+    "all_file = pd.read_csv(\"/Users/nalishjain/Documents/GitHub/ml-project/data/all.csv\")\n",
     "all_file.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -289,10 +194,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 1329 entries, 99 to 1429\n",
-      "Columns: 134 entries, Date to 30_coupon_count\n",
-      "dtypes: float64(129), int64(2), object(3)\n",
-      "memory usage: 1.4+ MB\n"
+      "Index: 1329 entries, 121 to 1569\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Date             1329 non-null   object \n",
+      " 1   Weekday          1329 non-null   int64  \n",
+      " 2   MealType         1329 non-null   object \n",
+      " 3   Paytm+Cash       1329 non-null   float64\n",
+      " 4   Coupons          1329 non-null   float64\n",
+      " 5   SemType          1329 non-null   object \n",
+      " 6   Holiday          1329 non-null   int64  \n",
+      " 7   CouponsMand      1329 non-null   float64\n",
+      " 8   15_coupon_count  1329 non-null   float64\n",
+      " 9   20_coupon_count  1329 non-null   float64\n",
+      " 10  25_coupon_count  1329 non-null   float64\n",
+      " 11  30_coupon_count  1329 non-null   float64\n",
+      "dtypes: float64(7), int64(2), object(3)\n",
+      "memory usage: 135.0+ KB\n"
      ]
     }
    ],
@@ -303,6 +222,15 @@
     "result_df = result_df.dropna()\n",
     "\n",
     "result_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df.to_csv(\"/Users/nalishjain/Documents/GitHub/ml-project/data/all+coupons.csv\", index = False)"
    ]
   }
  ],
