--- a/models/linear_regression.ipynb
+++ b/models/linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_11332\\3703358380.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/4f/kjgrgc293tn7cn556xk1h1g40000gn/T/ipykernel_1127/3703358380.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data['Weekday'][i] = w\n",
+      "/var/folders/4f/kjgrgc293tn7cn556xk1h1g40000gn/T/ipykernel_1127/3703358380.py:14: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Thursday' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  data['Weekday'][i] = w\n"
      ]
     }
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,121 +153,121 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -274,44 +276,44 @@
       ],
       "text/plain": [
        "   Holiday  CouponsMand  MealType_BreakFast  MealType_Dinner  \\\n",
-       "0        0          0.0                   1                0   \n",
-       "1        0          0.0                   0                0   \n",
-       "2        0          0.0                   0                0   \n",
-       "3        0          0.0                   0                1   \n",
-       "4        0          0.0                   1                0   \n",
+       "0        0          0.0                True            False   \n",
+       "1        0          0.0               False            False   \n",
+       "2        0          0.0               False            False   \n",
+       "3        0          0.0               False             True   \n",
+       "4        0          0.0                True            False   \n",
        "\n",
        "   MealType_EveningSnacks  MealType_Lunch  SemType_Acad  SemType_Vacation  \\\n",
-       "0                       0               0             1                 0   \n",
-       "1                       0               1             1                 0   \n",
-       "2                       1               0             1                 0   \n",
-       "3                       0               0             1                 0   \n",
-       "4                       0               0             1                 0   \n",
+       "0                   False           False          True             False   \n",
+       "1                   False            True          True             False   \n",
+       "2                    True           False          True             False   \n",
+       "3                   False           False          True             False   \n",
+       "4                   False           False          True             False   \n",
        "\n",
        "   Month_April  Month_August  ...  Month_November  Month_October  \\\n",
-       "0            0             0  ...               0              0   \n",
-       "1            0             0  ...               0              0   \n",
-       "2            0             0  ...               0              0   \n",
-       "3            0             0  ...               0              0   \n",
-       "4            0             0  ...               0              0   \n",
+       "0        False         False  ...           False          False   \n",
+       "1        False         False  ...           False          False   \n",
+       "2        False         False  ...           False          False   \n",
+       "3        False         False  ...           False          False   \n",
+       "4        False         False  ...           False          False   \n",
        "\n",
        "   Month_September  Weekday_Friday  Weekday_Monday  Weekday_Saturday  \\\n",
-       "0                1               0               0                 0   \n",
-       "1                1               0               0                 0   \n",
-       "2                1               0               0                 0   \n",
-       "3                1               0               0                 0   \n",
-       "4                1               1               0                 0   \n",
+       "0             True           False           False             False   \n",
+       "1             True           False           False             False   \n",
+       "2             True           False           False             False   \n",
+       "3             True           False           False             False   \n",
+       "4             True            True           False             False   \n",
        "\n",
        "   Weekday_Sunday  Weekday_Thursday  Weekday_Tuesday  Weekday_Wednesday  \n",
-       "0               0                 1                0                  0  \n",
-       "1               0                 1                0                  0  \n",
-       "2               0                 1                0                  0  \n",
-       "3               0                 1                0                  0  \n",
-       "4               0                 0                0                  0  \n",
+       "0           False              True            False              False  \n",
+       "1           False              True            False              False  \n",
+       "2           False              True            False              False  \n",
+       "3           False              True            False              False  \n",
+       "4           False             False            False              False  \n",
        "\n",
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,32 +338,32 @@
       "---  ------                  --------------  -----  \n",
       " 0   Holiday                 1430 non-null   int64  \n",
       " 1   CouponsMand             1430 non-null   float64\n",
-      " 2   MealType_BreakFast      1430 non-null   uint8  \n",
-      " 3   MealType_Dinner         1430 non-null   uint8  \n",
-      " 4   MealType_EveningSnacks  1430 non-null   uint8  \n",
-      " 5   MealType_Lunch          1430 non-null   uint8  \n",
-      " 6   SemType_Acad            1430 non-null   uint8  \n",
-      " 7   SemType_Vacation        1430 non-null   uint8  \n",
-      " 8   Month_April             1430 non-null   uint8  \n",
-      " 9   Month_August            1430 non-null   uint8  \n",
-      " 10  Month_December          1430 non-null   uint8  \n",
-      " 11  Month_February          1430 non-null   uint8  \n",
-      " 12  Month_January           1430 non-null   uint8  \n",
-      " 13  Month_July              1430 non-null   uint8  \n",
-      " 14  Month_June              1430 non-null   uint8  \n",
-      " 15  Month_March             1430 non-null   uint8  \n",
-      " 16  Month_May               1430 non-null   uint8  \n",
-      " 17  Month_November          1430 non-null   uint8  \n",
-      " 18  Month_October           1430 non-null   uint8  \n",
-      " 19  Month_September         1430 non-null   uint8  \n",
-      " 20  Weekday_Friday          1430 non-null   uint8  \n",
-      " 21  Weekday_Monday          1430 non-null   uint8  \n",
-      " 22  Weekday_Saturday        1430 non-null   uint8  \n",
-      " 23  Weekday_Sunday          1430 non-null   uint8  \n",
-      " 24  Weekday_Thursday        1430 non-null   uint8  \n",
-      " 25  Weekday_Tuesday         1430 non-null   uint8  \n",
-      " 26  Weekday_Wednesday       1430 non-null   uint8  \n",
-      "dtypes: float64(1), int64(1), uint8(25)\n",
+      " 2   MealType_BreakFast      1430 non-null   bool   \n",
+      " 3   MealType_Dinner         1430 non-null   bool   \n",
+      " 4   MealType_EveningSnacks  1430 non-null   bool   \n",
+      " 5   MealType_Lunch          1430 non-null   bool   \n",
+      " 6   SemType_Acad            1430 non-null   bool   \n",
+      " 7   SemType_Vacation        1430 non-null   bool   \n",
+      " 8   Month_April             1430 non-null   bool   \n",
+      " 9   Month_August            1430 non-null   bool   \n",
+      " 10  Month_December          1430 non-null   bool   \n",
+      " 11  Month_February          1430 non-null   bool   \n",
+      " 12  Month_January           1430 non-null   bool   \n",
+      " 13  Month_July              1430 non-null   bool   \n",
+      " 14  Month_June              1430 non-null   bool   \n",
+      " 15  Month_March             1430 non-null   bool   \n",
+      " 16  Month_May               1430 non-null   bool   \n",
+      " 17  Month_November          1430 non-null   bool   \n",
+      " 18  Month_October           1430 non-null   bool   \n",
+      " 19  Month_September         1430 non-null   bool   \n",
+      " 20  Weekday_Friday          1430 non-null   bool   \n",
+      " 21  Weekday_Monday          1430 non-null   bool   \n",
+      " 22  Weekday_Saturday        1430 non-null   bool   \n",
+      " 23  Weekday_Sunday          1430 non-null   bool   \n",
+      " 24  Weekday_Thursday        1430 non-null   bool   \n",
+      " 25  Weekday_Tuesday         1430 non-null   bool   \n",
+      " 26  Weekday_Wednesday       1430 non-null   bool   \n",
+      "dtypes: bool(25), float64(1), int64(1)\n",
       "memory usage: 57.4 KB\n"
      ]
     }
@@ -394,6 +396,7 @@
     "\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
+    "#PRINT TRAINING METRICS TOO\n",
     "mse = mean_squared_error(y1_test, y_pred)\n",
     "r2 = r2_score(y1_test, y_pred)\n",
     "\n",
@@ -491,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
