--- a/data/coupon_files/script_2.ipynb
+++ b/data/coupon_files/script_2.ipynb
@@ -43,6 +43,19 @@
        "      <th>SemType</th>\n",
        "      <th>Holiday</th>\n",
        "      <th>CouponsMand</th>\n",
+       "      <th>Ajwain Parantha</th>\n",
+       "      <th>Aloo Sabzi</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Fruit Custard</th>\n",
+       "      <th>Kathal</th>\n",
+       "      <th>Arvi</th>\n",
+       "      <th>Paneer Lababdar</th>\n",
+       "      <th>Seasonal Vegetable (Karela)</th>\n",
+       "      <th>Dhuli Urad Dal</th>\n",
+       "      <th>Aloo Kasoori Methi</th>\n",
+       "      <th>Nutrela Peas</th>\n",
+       "      <th>Palak Soya</th>\n",
+       "      <th>Lauki Chana</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -56,6 +69,19 @@
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -66,6 +92,19 @@
        "      <td>217.0</td>\n",
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -78,6 +117,19 @@
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -88,6 +140,19 @@
        "      <td>220.0</td>\n",
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -100,9 +165,23 @@
        "      <td>Acad</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 99 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -113,12 +192,28 @@
        "3  2022-09-01        3         Dinner       113.0    220.0    Acad        0   \n",
        "4  2022-09-02        4      BreakFast       100.0    236.0    Acad        0   \n",
        "\n",
-       "   CouponsMand  \n",
-       "0          0.0  \n",
-       "1          0.0  \n",
-       "2          0.0  \n",
-       "3          0.0  \n",
-       "4          0.0  "
+       "   CouponsMand  Ajwain Parantha  Aloo Sabzi  ...  Fruit Custard  Kathal  Arvi  \\\n",
+       "0          0.0              0.0         0.0  ...            0.0     0.0   0.0   \n",
+       "1          0.0              0.0         0.0  ...            0.0     0.0   0.0   \n",
+       "2          0.0              0.0         0.0  ...            0.0     0.0   0.0   \n",
+       "3          0.0              0.0         0.0  ...            0.0     0.0   0.0   \n",
+       "4          0.0              0.0         0.0  ...            0.0     0.0   0.0   \n",
+       "\n",
+       "   Paneer Lababdar  Seasonal Vegetable (Karela)  Dhuli Urad Dal  \\\n",
+       "0              0.0                          0.0             0.0   \n",
+       "1              0.0                          0.0             0.0   \n",
+       "2              0.0                          0.0             0.0   \n",
+       "3              0.0                          0.0             0.0   \n",
+       "4              0.0                          0.0             0.0   \n",
+       "\n",
+       "   Aloo Kasoori Methi  Nutrela Peas  Palak Soya  Lauki Chana  \n",
+       "0                 0.0           0.0         0.0          0.0  \n",
+       "1                 0.0           0.0         0.0          0.0  \n",
+       "2                 0.0           0.0         0.0          0.0  \n",
+       "3                 0.0           0.0         0.0          0.0  \n",
+       "4                 0.0           0.0         0.0          0.0  \n",
+       "\n",
+       "[5 rows x 99 columns]"
       ]
      },
      "execution_count": 2,
@@ -127,13 +222,13 @@
     }
    ],
    "source": [
-    "all_file = pd.read_csv(\"/Users/nalishjain/Documents/GitHub/ml-project/data/all.csv\")\n",
+    "all_file = pd.read_csv(\"/Users/nalishjain/Documents/GitHub/ml-project/data/all_with_onehot_new.csv\")\n",
     "all_file.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,24 +289,10 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 1329 entries, 121 to 1569\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column           Non-Null Count  Dtype  \n",
-      "---  ------           --------------  -----  \n",
-      " 0   Date             1329 non-null   object \n",
-      " 1   Weekday          1329 non-null   int64  \n",
-      " 2   MealType         1329 non-null   object \n",
-      " 3   Paytm+Cash       1329 non-null   float64\n",
-      " 4   Coupons          1329 non-null   float64\n",
-      " 5   SemType          1329 non-null   object \n",
-      " 6   Holiday          1329 non-null   int64  \n",
-      " 7   CouponsMand      1329 non-null   float64\n",
-      " 8   15_coupon_count  1329 non-null   float64\n",
-      " 9   20_coupon_count  1329 non-null   float64\n",
-      " 10  25_coupon_count  1329 non-null   float64\n",
-      " 11  30_coupon_count  1329 non-null   float64\n",
-      "dtypes: float64(7), int64(2), object(3)\n",
-      "memory usage: 135.0+ KB\n"
+      "Index: 1329 entries, 99 to 1429\n",
+      "Columns: 103 entries, Date to 30_coupon_count\n",
+      "dtypes: float64(98), int64(2), object(3)\n",
+      "memory usage: 1.1+ MB\n"
      ]
     }
    ],
@@ -230,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_df.to_csv(\"/Users/nalishjain/Documents/GitHub/ml-project/data/all+coupons.csv\", index = False)"
+    "result_df.to_csv(\"/Users/nalishjain/Documents/GitHub/ml-project/data/all_with_onehot_new+coupons.csv\", index = False)"
    ]
   }
  ],
