corrected some code

--- a/models/random_forest_final.ipynb
+++ b/models/random_forest_final.ipynb
@@ -390,6 +390,12 @@
     "                                random_state=42)\n",
     "    rfr.fit(X_train, y_train)\n",
     "\n",
+    "    y_pred_train = rfr.predict(X_train)\n",
+    "    rmse_train = np.sqrt(mean_squared_error(y_train, y_pred_train))\n",
+    "    r2_train = r2_score(y_train, y_pred_train)\n",
+    "    print('Train (full) RMSE:', rmse_train)\n",
+    "    print('Train (full) R2:', r2_train)\n",
+    "\n",
     "    y_pred_test = rfr.predict(X_test)\n",
     "    rmse_test = np.sqrt(mean_squared_error(y_test, y_pred_test))\n",
     "    r2_test = r2_score(y_test, y_pred_test)\n",
